--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div id="banner">
           <h1>CURSO DE DESARROLLO WEB CON VICTOR ROBLES</h1>
         </div>
-           <!-- Fin Banner -->
-           <!-- Inicio Tarjetas -->
+        <!-- Fin Banner -->
+        <!-- Inicio Tarjetas -->
         <div id="cards">
           <div class="card">
             <p class="icon">H</p>
@@ -67,7 +67,8 @@
               <p class="icon">a</p>
               <h2 class="category">Redes e Internet</h2>
               <p class="description">
-                Aprende a configurar y administrar redes informaticas y servidores
+                Aprende a configurar y administrar redes informaticas y
+                servidores
               </p>
             </div>
           </div>
@@ -82,52 +83,46 @@
           </div>
         </div>
         <!-- Fin tarjetas -->
-        
       </section>
       <!-- Incicio barra lateral -->
       <aside id="lateral">
-          <h3>BUSCAR</h3>
-          <div id="buscar">
-              <form action="">
-                  <input type="text" />
-                  <input type="button" value="L" />
-              </form>
-          </div>
-          <h3>LOGIN</h3>
-          <div id="login">
-              <form action="">
-                  <label id="user">U</label>
-                  <input type="email" />
-                  <label id="password">w</label>
-                  <input type="password" />
+        <h3>BUSCAR</h3>
+        <div id="buscar">
+          <form>
+            <input type="text" />
+            <input type="button" value="L" class="icon" />
+          </form>
+        </div>
+        <h3>LOGIN</h3>
+        <div id="login" class="aside-box">
+          <form>
+            <label id="user" class="icon">U</label>
+            <input type="email" />
+            <label id="password" class="icon">w</label>
+            <input type="password" />
 
-                  <input type="submit" value="Entrar" />
-                  <input type="reset" value="Limpiar" />
-                  <a href="#">Registrate aqui</a>
-                  <a href="#">¿Haz olvidado la contraseña?</a>
-
-
-              </form>
+            <input type="submit" value="Entrar" />
+            <input type="reset" value="Limpiar" />
+            <a href="#">Registrate aqui</a>
+            <a href="#">¿Haz olvidado la contraseña?</a>
+          </form>
+        </div>
+        <h3>REDES SOCIALES</h3>
+        <div id="social" class="aside-box">
+          <div class="twitter">
+            <a href="#" class="icon">t</a>
           </div>
-          <h3>REDES SOCIALES</h3>
-          <div id="social">
-              <div class="twitter">
-                  <a href="#">t</a>
-              </div>
-              <div class="facebook">
-                <a href="#">f</a>
-            </div>
-            <div class="youtube">
-                <a href="#">y</a>
-            </div>
+          <div class="facebook">
+            <a href="#" class="icon">f</a>
           </div>
-          <h3>PATROCINADORES</h3>
-          <div id="sponsors">
-              
+          <div class="youtube">
+            <a href="#" class="icon">y</a>
           </div>
+        </div>
+        <h3>PATROCINADORES</h3>
+        <div id="sponsors" class="aside-box"></div>
       </aside>
       <!-- Fin barra lateral -->
     </section>
- 
   </body>
 </html>
