Mitad de articulos

--- a/index.html
+++ b/index.html
@@ -123,6 +123,104 @@
         <div id="sponsors" class="aside-box"></div>
       </aside>
       <!-- Fin barra lateral -->
+      <!-- Inicio articulos -->
+      <section id="articles">
+        <h2>UTIMOS ARTICULOS</h2>
+        <article>
+          <div class="data">
+            <span>Fecha:12 dic</span>
+            <span>Categoria: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del articulo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit vel
+            repellat quia illo vero possimus quae doloribus excepturi eius ex
+            voluptate consectetur deserunt nesciunt ipsa minima blanditiis,
+            corporis praesentium natus.
+          </p>
+        </article>
+        <article>
+          <div class="data">
+            <span>Fecha:12 dic</span>
+            <span>Categoria: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del articulo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit vel
+            repellat quia illo vero possimus quae doloribus excepturi eius ex
+            voluptate consectetur deserunt nesciunt ipsa minima blanditiis,
+            corporis praesentium natus.
+          </p>
+        </article>
+        <article>
+          <div class="data">
+            <span>Fecha:12 dic</span>
+            <span>Categoria: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del articulo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit vel
+            repellat quia illo vero possimus quae doloribus excepturi eius ex
+            voluptate consectetur deserunt nesciunt ipsa minima blanditiis,
+            corporis praesentium natus.
+          </p>
+        </article>
+        <article>
+          <div class="data">
+            <span>Fecha:12 dic</span>
+            <span>Categoria: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del articulo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit vel
+            repellat quia illo vero possimus quae doloribus excepturi eius ex
+            voluptate consectetur deserunt nesciunt ipsa minima blanditiis,
+            corporis praesentium natus.
+          </p>
+        </article>
+        <article>
+          <div class="data">
+            <span>Fecha:12 dic</span>
+            <span>Categoria: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del articulo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit vel
+            repellat quia illo vero possimus quae doloribus excepturi eius ex
+            voluptate consectetur deserunt nesciunt ipsa minima blanditiis,
+            corporis praesentium natus.
+          </p>
+        </article>
+        <article>
+          <div class="data">
+            <span>Fecha:12 dic</span>
+            <span>Categoria: Pruebas</span>
+          </div>
+          <h4>
+            <a href="#">Titulo del articulo</a>
+          </h4>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit vel
+            repellat quia illo vero possimus quae doloribus excepturi eius ex
+            voluptate consectetur deserunt nesciunt ipsa minima blanditiis,
+            corporis praesentium natus.
+          </p>
+        </article>
+        <article id="blog">
+          <a href="#">ir al blog</a>
+        </article>
+      </section>
+      <!-- Fin Articulos -->
     </section>
   </body>
 </html>
