--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
       <!-- Inicio articulos -->
       <section id="articles">
         <h2>UTIMOS ARTICULOS</h2>
+        <div class="clearfix"></div>
         <article>
           <div class="data">
             <span>Fecha:12 dic</span>
@@ -221,6 +222,20 @@
         </article>
       </section>
       <!-- Fin Articulos -->
+      <!-- Pie de pagina -->
+      <footer id="footer">
+        <div class="warp">
+          <nav id="menu">
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">blog</a></li>
+              <li><a href="#">Formacion</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+      <!-- Fin de pie de Pagina -->
     </section>
   </body>
 </html>
